Bug 100594 - [IGT] [BXT/SKL/KBL/BDW/BSW] gem_tiled_swapping/threaded and no-threaded are not allocating memory
Summary: [IGT] [BXT/SKL/KBL/BDW/BSW] gem_tiled_swapping/threaded and no-threaded are n...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Elio
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-05 21:00 UTC by Elio
Modified: 2017-07-05 19:27 UTC (History)
1 user (show)

See Also:
i915 platform: BDW, BSW/CHT, BXT, KBL, SKL
i915 features: GEM/Other


Attachments
dmesg log (120.06 KB, text/plain)
2017-04-05 21:00 UTC, Elio
no flags Details

Description Elio 2017-04-05 21:00:41 UTC
Created attachment 130715 [details]
dmesg log

The following test are failing:

igt@gem_tiled_swapping@non-threaded
gem_tiled_swapping@threaded

Both are showing "not allocating memory"

Expected result: should pass

Actual result: fail

Output:

IGT-Version: 1.18-g56741ce (x86_64) (Linux: 4.11.0-rc5-drm-tip-qa-ww14-commit-5bc82ec+ x86_64)
Using 640 1MiB objects (available RAM: 290/1849, swap: 1894)
(gem_tiled_swapping:1526) ioctl-wrappers-CRITICAL: Test assertion failure function gem_set_domain, file ioctl_wrappers.c:435:
(gem_tiled_swapping:1526) ioctl-wrappers-CRITICAL: Failed assertion: __gem_set_domain(fd, handle, read, write) == 0
(gem_tiled_swapping:1526) ioctl-wrappers-CRITICAL: Last errno: 12, Cannot allocate memory
(gem_tiled_swapping:1526) ioctl-wrappers-CRITICAL: error: -12 != 0
Stack trace:
  #0 [__igt_fail_assert+0x101]
  #1 [gem_set_domain+0x44]
  #2 [fill_bo+0x2f]
  #3 [__real_main166+0xcf]
  #4 [main+0x33]
  #5 [__libc_start_main+0xf1]
  #6 [_start+0x29]
  #7 [<unknown>+0x29]
Subtest threaded failed.
**** DEBUG ****
(gem_tiled_swapping:1526) ioctl-wrappers-CRITICAL: Test assertion failure function gem_set_domain, file ioctl_wrappers.c:435:
(gem_tiled_swapping:1526) ioctl-wrappers-CRITICAL: Failed assertion: __gem_set_domain(fd, handle, read, write) == 0
(gem_tiled_swapping:1526) ioctl-wrappers-CRITICAL: Last errno: 12, Cannot allocate memory
(gem_tiled_swapping:1526) ioctl-wrappers-CRITICAL: error: -12 != 0
****  END  ****
Subtest threaded: FAIL (1.123s)
Comment 1 Jairo Miramontes 2017-04-05 23:41:07 UTC
Also seen on SKL with latest configuration: 

============== SOFTWARE =========================
Component         : drm
	tag       : libdrm-2.4.76-16-g6312017
	commit    : 6312017 

Component         : cairo
	tag       : 1.15.4-11-gcffa452
	commit    : cffa452 

Component         : intel-gpu-tools
	tag       : intel-gpu-tools-1.18-56-g56741ce
	commit    : 56741ce 



============== KERNEL INFO =========================
commit bf30bc2a70b83a77ba63436023f3550083715c56
Author: Daniel Stone <daniels@collabora.com>
Date:   Tue Apr 4 21:01:18 2017 +0100

    drm-tip: 2017y-04m-04d-20h-00m-56s UTC integration manifest


Kernel version : 4.11.0-rc5-bf30bc2
Architecture : source amd64 all
Comment 2 Jani Saarinen 2017-04-06 05:58:26 UTC
Patch from Chris: https://patchwork.freedesktop.org/series/22554/
Comment 3 Chris Wilson 2017-04-06 12:06:12 UTC
commit b268d9fe0f10544f5f7a1b7015e2b97075e6215d
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Apr 5 23:15:14 2017 +0100

    drm/i915: Use the right mapping_gfp_mask for final shmem allocation
    
    Many sightings report the greater prevalence of allocation failures.
    This is all due to the incorrect use of mapping_gfp_constraint(), so
    remove it in favour of just querying the mapping_gfp_mask() which are
    the exact gfp_t we wanted in the first place.
    
    We still do expect a higher chance of reporting ENOMEM, as that is the
    intention of using __GFP_NORETRY -- to fail rather than oom after having
    reclaimed from our bo caches, and having done a direct|kswapd reclaim
    pass.
Comment 4 Humberto Israel Perez Rodriguez 2017-05-24 22:44:30 UTC
same issue with KBL and latest configuration

test cases
============================================
igt@gem_tiled_swapping@threaded
igt@gem_tiled_swapping@non-threaded




Component: drm
    tag: libdrm-2.4.80-15-geeb51df
    commit: eeb51df3ced003515ba4a71492eeb86c145cb77e

Component: cairo
    tag: 1.15.4-21-g9d44136
    commit: 9d44136ef8e2a1ad2c6631beb4bbdaeed7a2dad8

Component: intel-gpu-tools
    tag: intel-gpu-tools-1.18-209-g26c266f
    commit: 26c266febe1fc97c46d25a33aaf6a1869a51c008

Component: piglit
    tag: piglit-v1
    commit: 9cc5b2169ab6eb8a6a09329836d8d884d4350eec


======================================
             Software
======================================
kernel version              : 4.12.0-rc2-drm-tip-ww21-commit-7808a0f+
architecture                : x86_64
os version                  : Ubuntu 16.10
os codename                 : yakkety
kernel driver               : i915
bios revision               : 5.6
bios release date           : 05/03/2017
ksc                         : 8.1

======================================
             Hardware
======================================
motherboard id             : NUC7i5BNB
form factor                : Desktop
cpu family                 : Core i5
cpu family id              : 6
cpu information            : Intel(R) Core(TM) i5-7260U CPU @ 2.20GHz
gpu card                   : Intel Corporation Device 5926 (rev 06) (prog-if 00 [VGA controller])
memory ram                 : 15.58 GB
max memory ram             : 32 GB
cpu thread                 : 4
cpu core                   : 2
cpu model                  : 142
cpu stepping               : 9
socket                     : Other
signature                  : Type 0, Family 6, Model 142, Stepping 9
hard drive                 : 447GiB (480GB)
current cd clock frequency : 337500 kHz
maximum cd clock frequency : 675000 kHz
displays connected         : DP-1 DP-2

======================================
             Firmware
======================================
dmc fw loaded             : yes
dmc version               : 1.1
guc fw loaded             : NONE
guc version wanted        : 0.0
guc version found         : 0.0
Comment 5 Humberto Israel Perez Rodriguez 2017-05-30 20:13:06 UTC
Same issue on BDW with latest configuration

igt@gem_tiled_swapping@threaded
igt@gem_tiled_swapping@non-threaded


Component: drm
    tag: libdrm-2.4.80-18-gce9e3ba
    commit: ce9e3ba6e2cc65e1e9e6e05a5f326c4dd25ab2c4

Component: cairo
    tag: 1.15.4-22-g0fd0fd0
    commit: 0fd0fd0ae9ad8cfb177bb844091de98c0235917e

Component: intel-gpu-tools
    tag: intel-gpu-tools-1.18-211-g00ce341
    commit: 00ce341b95c718611689ded8ccec45086186c5b7

Component: piglit
    tag: piglit-v1
    commit: ebbb9c5dcc6a637884d54e06eb430a8c14993413

	
Kernel version
=========================================
commit 75397b60fe84eb5125a78a5ee304def86b761994
Author:     Chris Wilson <chris@chris-wilson.co.uk>
AuthorDate: Tue May 30 12:56:32 2017 +0100
Commit:     Chris Wilson <chris@chris-wilson.co.uk>
CommitDate: Tue May 30 12:56:32 2017 +0100

    drm-tip: 2017y-05m-30d-11h-55m-42s UTC integration manifest
Comment 6 Humberto Israel Perez Rodriguez 2017-06-01 00:27:16 UTC
same issue on BSW with latest configuration

igt@gem_tiled_swapping@threaded
igt@gem_tiled_swapping@non-threaded

Component: drm
    tag: libdrm-2.4.80-18-gce9e3ba
    commit: ce9e3ba6e2cc65e1e9e6e05a5f326c4dd25ab2c4

Component: cairo
    tag: 1.15.4-22-g0fd0fd0
    commit: 0fd0fd0ae9ad8cfb177bb844091de98c0235917e

Component: intel-gpu-tools
    tag: intel-gpu-tools-1.18-211-g00ce341
    commit: 00ce341b95c718611689ded8ccec45086186c5b7

Component: piglit
    tag: piglit-v1
    commit: ebbb9c5dcc6a637884d54e06eb430a8c14993413

kernel
===================================================
commit 4aa1d46d3b24bbe545cdf7cbd407c18f5cd5e43d
Author:     Daniel Vetter <daniel.vetter@ffwll.ch>
AuthorDate: Wed May 31 10:59:05 2017 +0200
Commit:     Daniel Vetter <daniel.vetter@ffwll.ch>
CommitDate: Wed May 31 10:59:05 2017 +0200

    drm-tip: 2017y-05m-31d-08h-58m-36s UTC integration manifest
Comment 7 Chris Wilson 2017-06-14 10:01:08 UTC
commit eaf41801559a687cc7511c04dc712984765c9dd7
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Jun 9 12:03:47 2017 +0100

    drm/i915: Remove __GFP_NORETRY from our buffer allocator
Comment 8 Elizabeth 2017-06-16 21:19:34 UTC
Please test and share results to be able to close this bug.
Comment 9 Ricardo Madrigal 2017-07-05 19:26:50 UTC
Works fine with the following configuration on BXT, KBL, SKL, BDW, BSW.

This is my Configuration:

======================================
                 Kernel
======================================
commit df0182c2c95385492772c6e4ace76b463298b8ca
Author:     Jani Nikula <jani.nikula@intel.com>
AuthorDate: Mon Jul 3 16:20:53 2017 +0300
Commit:     Jani Nikula <jani.nikula@intel.com>
CommitDate: Mon Jul 3 16:20:53 2017 +0300

drm-tip: 2017y-07m-03d-13h-20m-24s UTC integration manifest


======================================
        Graphic drivers
======================================
Component: drm
    tag: libdrm-2.4.81-24-g3095cc8
    commit: 3095cc8eaba1aa87ad38c04ae2b1eabe30f7e16c

Component: cairo
    tag: 1.15.6-2-g57b4050
    commit: 57b40507dda3f58dfc8635548d606b86dc7bcf51

Component: intel-gpu-tools
    tag: intel-gpu-tools-1.19-57-g6fcc8e8
    commit: 6fcc8e8b247661c7950b998e0b95141ffbd6b833

Component: piglit
    tag: piglit-v1
    commit: c8f4fd9eeb298a2ef0855927f22634f794ef3eff
==========================================


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.